2010-09-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* CompilerDriver_ipt_policy.cpp (processPolicyRuleSet): fixed
	#1707 "call function "prolog_commands" from the main iptables
	script part instead of function "script_body" when prolog should
	be executed after iptables reset"

	* configlets/linux24/script_skeleton (cmd): fixed SF bug 3060325
	"Address table object and prolog script conflict". Generated
	script should run prolog before checking and loading run-time
	address tables.

	* NATCompiler_PrintRule.cpp (processNext): fixed SF bug 3057503
	"DNAT rule with dynamic IP has a white space, causing error".

	* PolicyCompiler_PrintRule.cpp (_printIpSetMatch): fixed #1705
	"iptables (v>=1.4.4) "--set option deprecated ..."  (SF bug 3059893)
	Option "--set" has been deprecated and renamed "--match-set" in
	iptales 1.4.4

	* CompilerDriver_pf.cpp (printPathForAllTools): fixed SF bug
	3061034 "ifconfig definition missing". Script generated for the
	ipfw firewall on Mac OS X missed definition of variable IFCONFIG.

2010-09-13  Vadim Kurland  <vadim@vk.crocodile.org>

	* IPTImporter.cpp (addPktTypeMatch), iptables.g: fixed #1703
	"importing iptables line with module pkttype causes parser
	error". We do not have any object with the behavior closely
	resembling that of iptables module "pkttype" so the importer
	creates CustomService object with the code taken from the original
	iptables rule. SF bug 3065435

	* VERSION (FWB_MICRO_VERSION): started 4.1.2

2010-08-20  Vadim Kurland  <vadim@fwbuilder.org>

	* v4.1.1 released

2010-08-19  Vadim Kurland  <vadim@vk.crocodile.org>

	* NATCompiler_ipt.cpp (splitNATBranchRule::processNext): fixed #1686
	"can not generate basic NAT branching rule". NAT branching rules
	were not generated in single rule compile mode because compiler
	needs information about targets used in the branch rule set rules
	to decide which chain the branching rule should be placed in. Now it